# cybercafe

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  VISION.md  ppp-server.service  ppp-server.socket  tls-guard.service
crates/mnl/: Cargo.toml  build.rs
crates/mnl/src/: lib.rs
crates/modem-ctl/: Cargo.toml
crates/modem-ctl/src/: main.rs
crates/modem-engine/: Cargo.toml
crates/modem-engine/src/: clock_recovery.rs  lib.rs  v90_encoder.rs
crates/ppp-server/: Cargo.toml
crates/ppp-server/src/: main.rs
crates/privsep/: Cargo.toml
crates/privsep/src/: lib.rs
crates/sip-modem-dial/: Cargo.toml
crates/sip-modem-dial/src/: main.rs
crates/sip-modem-server/: Cargo.toml
crates/sip-modem-server/src/: main.rs
crates/spandsp-sys/: Cargo.toml  build.rs
crates/spandsp-sys/src/: lib.rs
crates/tls-guard/: Cargo.toml  build.rs  port-rules.conf
crates/tls-guard/src/: certmint.rs  clienthello.rs  dns_snoop.rs  intercept.rs  listener.rs  main.rs  nfqueue.rs  nft_setup.rs  portmap.rs  route_setup.rs  upgrader.rs  upgrader_listener.rs
test/: ppp-server-serial.sh  ppp-server-test.sh  pppd-netns.sh  sip-dial-netns.sh  sip-dial-test.sh
