[package]
name = "sip-modem-dial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sip-modem-dial"
path = "src/main.rs"

[dependencies]
modem-engine = { path = "../modem-engine" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"
