[package]
name = "tls-guard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls-guard"
path = "src/main.rs"

[dependencies]
mnl = { path = "../mnl" }
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
openssl = "0.10"
socket2 = "0.5"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
lru = "0.12"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
privsep = { path = "../privsep" }
